# AssignemntPortal

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  MyCourse  README.md  RELEASE.md  gradebook.db  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml
assignment_hub_jupyterlab/: __init__.py
course101/: gradebook.db  nbgrader_config.py
schema/: plugin.json
src/: App.tsx  api.ts  index.tsx  types.ts
src/components/: AssignmentDetailsPage.tsx  AssignmentsPage.tsx
style/: index.css
