[build-system]
requires = [
    "hatchling>=1.5.0",
    "jupyterlab>=3.6.0,<4",
    "hatch-nodejs-version>=0.3.2"
]
build-backend = "hatchling.build"


[project]
name = "assignment_hub_jupyterlab"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "jupyterlab>=4.0",
    "nbgrader>=0.9"
]

dynamic = ["version", "description", "authors", "urls", "keywords"]


[tool.hatch.version]
source = "nodejs"


[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]


[tool.hatch.build.targets.sdist]
artifacts = ["assignment_hub_jupyterlab/labextension"]
exclude = [".github", "binder"]


[tool.hatch.build.targets.wheel.shared-data]
"assignment_hub_jupyterlab/labextension" = "share/jupyter/labextensions/assignment-hub-jupyterlab"
"install.json" = "share/jupyter/labextensions/assignment-hub-jupyterlab/install.json"


[tool.hatch.build.hooks.version]
path = "assignment_hub_jupyterlab/_version.py"


[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"

ensured-targets = [
    "assignment_hub_jupyterlab/labextension/static/style.js",
    "assignment_hub_jupyterlab/labextension/package.json"
]

skip-if-exists = [
    "assignment_hub_jupyterlab/labextension/static/style.js"
]


[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]


[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "assignment_hub_jupyterlab/labextension"


[tool.jupyter-releaser.options]
version_cmd = "hatch version"


[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=3.6.0,<4'",
    "jlpm",
    "jlpm build:prod"
]

before-build-python = ["jlpm run clean"]


[tool.check-wheel-contents]
ignore = ["W002"]

